--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "type": "commonjs",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "tslog": "^3.3.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
