--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
-  "name": "start-new-project",
-  "version": "1.0.0",
-  "main": "src/index.ts",
-  "license": "MIT",
-  "type": "commonjs",
-  "dependencies": {
-    "express": "^4.18.1",
-    "inversify": "^6.0.1",
-    "reflect-metadata": "^0.1.13",
-    "tslog": "^3.3.4"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.13",
-    "nodemon": "^2.0.19",
-    "typescript": "^4.8.3"
-  },
-  "scripts": {
-    "watch": "tsc -w",
-    "dev": "nodemon --inspect dist/main.js",
-    "build": "tsc",
-    "start": "node dist/main.js"
-  }
+	"name": "start-new-project",
+	"version": "1.0.0",
+	"main": "src/index.ts",
+	"license": "MIT",
+	"type": "commonjs",
+	"dependencies": {
+		"express": "^4.18.1",
+		"inversify": "^6.0.1",
+		"reflect-metadata": "^0.1.13",
+		"tslog": "^3.3.4"
+	},
+	"devDependencies": {
+		"@types/express": "^4.17.13",
+		"@typescript-eslint/eslint-plugin": "^5.42.0",
+		"@typescript-eslint/parser": "^5.42.0",
+		"eslint": "^8.26.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"nodemon": "^2.0.19",
+		"prettier": "^2.7.1",
+		"typescript": "^4.8.3"
+	},
+	"scripts": {
+		"watch": "tsc -w",
+		"dev": "nodemon --inspect dist/main.js",
+		"build": "tsc",
+		"start": "node dist/main.js",
+		"lint": "eslint ./src/**",
+		"lint:fix": "eslint ./src/** --fix"
+	}
 }
