--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"nodemon": "^2.0.19",
 		"prettier": "^2.7.1",
+		"ts-node": "^10.9.1",
 		"typescript": "^4.8.3"
 	},
 	"scripts": {
 		"watch": "tsc -w",
-		"dev": "nodemon --inspect dist/main.js",
+		"dev": "nodemon",
+		"dev:inspect": "nodemon -e ts,json --exec node --inspect=localhost:9222 -r ts-node/register src/main.ts",
 		"build": "tsc",
 		"start": "node dist/main.js",
 		"lint": "eslint ./src/**",
