--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"license": "MIT",
 	"type": "commonjs",
 	"dependencies": {
+		"body-parser": "^1.20.1",
 		"express": "^4.18.1",
 		"inversify": "^6.0.1",
 		"reflect-metadata": "^0.1.13",
