--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"license": "MIT",
 	"type": "commonjs",
 	"dependencies": {
+		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.20.1",
 		"express": "^4.18.1",
 		"inversify": "^6.0.1",
@@ -12,6 +13,7 @@
 		"tslog": "^3.3.4"
 	},
 	"devDependencies": {
+		"@types/bcryptjs": "^2.4.2",
 		"@types/express": "^4.17.13",
 		"@typescript-eslint/eslint-plugin": "^5.42.0",
 		"@typescript-eslint/parser": "^5.42.0",
