--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"license": "MIT",
 	"type": "commonjs",
 	"dependencies": {
+		"@prisma/client": "^4.6.1",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.20.1",
 		"class-transformer": "^0.5.1",
@@ -25,6 +26,7 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"nodemon": "^2.0.19",
 		"prettier": "^2.7.1",
+		"prisma": "^4.6.1",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.8.3"
 	},
@@ -33,6 +35,7 @@
 		"dev": "nodemon",
 		"dev:inspect": "nodemon -e ts,json --exec node --inspect=localhost:9222 -r ts-node/register src/main.ts",
 		"build": "tsc",
+		"generate": "prisma generate",
 		"start": "node dist/main.js",
 		"lint": "eslint ./src/**",
 		"lint:fix": "eslint ./src/** --fix"
