--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.2",
 		"@types/express": "^4.17.13",
+		"@types/jest": "^29.2.3",
 		"@types/jsonwebtoken": "^8.5.9",
 		"@typescript-eslint/eslint-plugin": "^5.42.0",
 		"@typescript-eslint/parser": "^5.42.0",
 		"eslint": "^8.26.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.2.1",
+		"jest": "^29.3.1",
 		"nodemon": "^2.0.19",
 		"prettier": "^2.7.1",
 		"prisma": "^4.6.1",
+		"ts-jest": "^29.0.3",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.8.3"
 	},
@@ -39,6 +42,7 @@
 		"build": "tsc",
 		"generate": "prisma generate",
 		"start": "node dist/main.js",
+		"test": "jest",
 		"lint": "eslint ./src/**",
 		"lint:fix": "eslint ./src/** --fix"
 	}
