--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@types/express": "^4.17.13",
 		"@types/jest": "^29.2.3",
 		"@types/jsonwebtoken": "^8.5.9",
+		"@types/supertest": "^2.0.12",
 		"@typescript-eslint/eslint-plugin": "^5.42.0",
 		"@typescript-eslint/parser": "^5.42.0",
 		"eslint": "^8.26.0",
@@ -31,6 +32,7 @@
 		"nodemon": "^2.0.19",
 		"prettier": "^2.7.1",
 		"prisma": "^4.6.1",
+		"supertest": "^6.3.1",
 		"ts-jest": "^29.0.3",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.8.3"
