--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"generate": "prisma generate",
 		"start": "node dist/main.js",
 		"test": "jest",
+		"test:e2e": "jest --config jest.e2e.config.ts --coverage",
 		"lint": "eslint ./src/**",
 		"lint:fix": "eslint ./src/** --fix"
 	}
